    use tabs but use spaces for formatting

Also see https://github.com/MDAnalysis/mdanalysis/wiki/MDAnalysisTests
and https://github.com/MDAnalysis/mdanalysis/wiki/UnitTests

------------------------------------------------------------------------------
??/??/16 jbarnoud, orbeckst, fiona-naughton, manuel.nuno.melo, richardjgowers
         tyler.je.reddy, utkbansal, vedantrathore

  * 0.16
    - added two unit tests for MDAnalysis.analysis.polymer
    - added test for LeafletFinder handling a selection string
    - Added unit test for MDAnalysis.analysis.distances.between()
    - Added unit tests for MDAnalysis.analysis.distances.dist()
    - Added unit tests for clip_matrix frustrum boundary checks
    - Added unit tests for bad file mode passed to SelectionWriter
    - Added regression tests for MDAnalysis.analysis.nuclinfo (Issue #790)
    - test_imports now recursively checks subdirectories (Issue #964).
    - removed usage of random numbers from tests (Issue #958)
    - test_imports now always uses the correct source directory (Issue #939).
    - Added a plugin to list the non-closed file handle (Issue #853, PR #874).
      The plugin can be disabled with --no-open-files.
    - The test_failure test can be made fail by setting the MDA_FAILURE_TEST
      environment variable (PR #874)
    - replaced XTC_HOLE test trajectory with more meaningful one MULTIPDB_HOLE
    - install external packages on Travis (SETUP == full: HOLE, clustalw)
      to test additional analysis code (Issue #898)
    - add tests for new auxiliary module

05/15/16  orbeckst, jbarnoud, pedrishi, fiona-naughton, jdetle
  * 0.15.0
    - removed biopython PDB parser for coordinates and topology (Issue #777)
    - Added test for weighted rmsd (issue #814)
    - metadata update: link download_url to GitHub releases so that
      Depsy recognizes contributors (issue #749) and added
      @richardjgowers as maintainer
    - a __version__ variable is now exposed; it is built by setup.py from the