@@ -84,6 +84,7 @@ Chronological list of authors
   - Shobhit Agarwal
   - Vedant Rathore
   - Xiki Tempula
+  - Akshay Gupta
 
 External code
 -------------
